--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -8,7 +8,6 @@ html {
   height: 100%;
 }
 
-
 body {
   font-size: 2rem;
 }
@@ -51,5 +50,23 @@ header {
 }
 
 .header-description p {
+  width: 600px;
+}
+
+/* About */
+.about {
+  height: 500px;
+  display: flex;
+  align-items: center;
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-content p {
   width: 600px;
 }
