--- a/styles/styles.css
+++ b/styles/styles.css
@@ -451,6 +451,11 @@ body {
   margin: 0 auto;
 }
 
+a {
+  padding: 5px;
+  text-decoration: none;
+}
+
 /* ========================== */
 /* Header*/
 header {
@@ -570,4 +575,40 @@ header {
 
 .main-content {
   margin-bottom: 20px;
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 180px;
+}
+
+.footer-navigation-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer-navigation-list li {
+  margin: 5px;
+}
+
+.footer-copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px;
 }
