--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -29,7 +29,7 @@ header {
   height: 100vh;
   background-image: url('https://source.unsplash.com/2000x900');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: cover;
 }
 
 .header-content {
@@ -94,7 +94,7 @@ header {
   align-items: center;
 }
 
-.main-img, 
+.main-img,
 .main-search {
   padding: 10px;
 }
