configured how to display recipes on the page

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -119,9 +119,12 @@ header {
   margin: 5px;
 }
 
-
 .footer-copyright {
   display: flex;
   justify-content: center;
   padding: 10px;
+}
+
+.recipe-container {
+  height: 500px;
 }
