--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -78,7 +78,9 @@ header {
 /* Main */
 
 .main {
-  height: 500px;
+  // https://css-tricks.com/couple-takes-sticky-footer/
+  min-height: calc(100vh - 180px); // for sticky footer
+  // height: 500px;
   display: flex;
   align-items: center;
 }
@@ -103,11 +105,14 @@ header {
   margin-bottom: 20px;
 }
 
+footer {
+  height: 180px;
+}
+
 .footer-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 180px;
 }
 
 .footer-navigation-list {
@@ -123,8 +128,10 @@ header {
   display: flex;
   justify-content: center;
   padding: 10px;
+  margin-top: 40px;
 }
 
 .recipe-container {
-  height: 500px;
+  height: 100%;
+  padding: 100px 0px;
 }
