Error handling in progress: not working as expected

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -577,6 +577,12 @@ header {
   margin-bottom: 20px;
 }
 
+/* Form */
+.invalid-input {
+  border: 1px solid red;
+}
+
+/* Footer */
 footer {
   height: 180px;
 }
