--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -105,6 +105,14 @@ header {
   margin-bottom: 20px;
 }
 
+
+/* Form */
+.invalid-input {
+  border: 1px solid red;
+}
+
+
+/* Footer */
 footer {
   height: 180px;
 }
