Added assets; Started work on the styling of the website; Work in progress on the sections

--- a/styles/sass/_colors.scss
+++ b/styles/sass/_colors.scss
@@ -3,7 +3,7 @@
 
 // Functional Colors:
 $primary-background-color: #070808;
-$secondary-background-color: #584D35;
+$secondary-background-color: #262119;
 $primary-text-color: #FAFAFA;
 $secondary-text-color: #C4C4C1;
 // Primary Brand Colors:
