--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -12,26 +12,47 @@ html {
 
 body {
   font-size: 2rem;
+  color: $primary-text-color;
+  @include primary-font(2.4rem, 2.2)
 }
+
 .wrapper {
   width: 90%;
   max-width: 1280px;
   margin: 0 auto;
 }
+
+section {
+  padding: 100px 0;
+}
+
 a {
   padding: 5px;
   text-decoration: none;
+}
+
+h1 {
+  @include secondary-font(5rem, 2.8, 600, 1rem);
+  color: $primary-color;
+}
+
+h2 {
+  @include secondary-font(3rem, 2.2, 500, 0.5rem);
+}
+
+h3 {
+  @include secondary-font(4rem, 2.2, 500, 0.5rem);
+  color: $primary-color;
 }
 /* ========================== */
 
 
 /* Header*/
-
 header {
   height: 100vh;
-  background-image: url('https://source.unsplash.com/2000x900');
+  background-image: url(../assets/banner.jpg);
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: cover;
 }
 
 .header-content {
@@ -40,16 +61,21 @@ header {
   align-items: center;
 }
 
-.navigation-list {
+.header-nav-list {
   display: flex;
   justify-content: space-between;
   width: 400px;
+}
+
+.header-nav-list a {
+  color: $primary-color;
 }
 
 .header-description {
   width: 100%;
   height: 600px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -58,12 +84,14 @@ header {
   width: 600px;
 }
 
-/* About */
 
+/* About */
 .about {
   height: 500px;
   display: flex;
   align-items: center;
+  background-color: $primary-background-color;
+  color: $primary-text-color;
 }
 
 .about-content {
@@ -77,14 +105,15 @@ header {
   width: 600px;
 }
 
-/* Main */
 
+/* Main */
 .main {
   // https://css-tricks.com/couple-takes-sticky-footer/
   min-height: calc(100vh - 180px); // for sticky footer
   // height: 500px;
   display: flex;
   align-items: center;
+  background-color: $secondary-background-color;
 }
 
 .main-title {
@@ -108,6 +137,12 @@ header {
 }
 
 
+/* Main Image */
+.main-img {
+  width: 300px;
+}
+
+
 /* Form */
 .invalid-input {
   border: 1px solid red;
@@ -116,22 +151,28 @@ header {
 
 /* Footer */
 footer {
-  height: 180px;
+  height: 100%;
+  background-color: $primary-background-color;;
 }
 
 .footer-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 50px 0px;
 }
 
-.footer-navigation-list {
+.footer-nav-list {
   display: flex;
   flex-direction: column;
 }
 
-.footer-navigation-list li {
+.footer-nav-list li {
   margin: 5px;
+}
+
+.footer-nav-list a {
+  color: $primary-color;
 }
 
 .footer-copyright {
@@ -139,8 +180,16 @@ footer {
   justify-content: center;
   padding: 10px;
   margin-top: 40px;
+
+  span,
+  a {
+    color: $warning-color-2;
+    font-size: 1.8rem;
+  }
 }
 
+
+/* Recipe Container */
 .recipe-container {
   height: 100%;
   padding: 100px 0px;
