--- a/styles/styles.css
+++ b/styles/styles.css
@@ -435,6 +435,12 @@ img {
   max-width: 100%;
 }
 
+/* FONTS
+========================== */
+/* MIXINS
+========================== */
+/* COLORS
+========================== */
 /* Global */
 html {
   font-size: 62.5%;
@@ -443,6 +449,12 @@ html {
 
 body {
   font-size: 2rem;
+  color: #FAFAFA;
+  font-family: 'Raleway', 'Times', 'Arial', sans-serif;
+  font-size: 2.4rem;
+  letter-spacing: normal;
+  line-height: 2.2;
+  font-weight: 400;
 }
 
 .wrapper {
@@ -451,18 +463,48 @@ body {
   margin: 0 auto;
 }
 
+section {
+  padding: 100px 0;
+}
+
 a {
   padding: 5px;
   text-decoration: none;
+}
+
+h1 {
+  font-family: 'Ovo', 'Times', 'Arial', serif;
+  font-size: 5rem;
+  letter-spacing: 1rem;
+  line-height: 2.8;
+  font-weight: 600;
+  color: #EFAC27;
+}
+
+h2 {
+  font-family: 'Ovo', 'Times', 'Arial', serif;
+  font-size: 3rem;
+  letter-spacing: 0.5rem;
+  line-height: 2.2;
+  font-weight: 500;
+}
+
+h3 {
+  font-family: 'Ovo', 'Times', 'Arial', serif;
+  font-size: 4rem;
+  letter-spacing: 0.5rem;
+  line-height: 2.2;
+  font-weight: 500;
+  color: #EFAC27;
 }
 
 /* ========================== */
 /* Header*/
 header {
   height: 100vh;
-  background-image: url("https://source.unsplash.com/2000x900");
+  background-image: url(../assets/banner.jpg);
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: cover;
 }
 
 .header-content {
@@ -477,7 +519,7 @@ header {
           align-items: center;
 }
 
-.navigation-list {
+.header-nav-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -487,12 +529,20 @@ header {
   width: 400px;
 }
 
+.header-nav-list a {
+  color: #EFAC27;
+}
+
 .header-description {
   width: 100%;
   height: 600px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -514,6 +564,8 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #070808;
+  color: #FAFAFA;
 }
 
 .about-content {
@@ -545,6 +597,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #262119;
 }
 
 .main-title {
@@ -577,6 +630,11 @@ header {
   margin-bottom: 20px;
 }
 
+/* Main Image */
+.main-img {
+  width: 300px;
+}
+
 /* Form */
 .invalid-input {
   border: 1px solid red;
@@ -584,7 +642,8 @@ header {
 
 /* Footer */
 footer {
-  height: 180px;
+  height: 100%;
+  background-color: #070808;
 }
 
 .footer-container {
@@ -596,9 +655,10 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 50px 0px;
 }
 
-.footer-navigation-list {
+.footer-nav-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -608,8 +668,12 @@ footer {
           flex-direction: column;
 }
 
-.footer-navigation-list li {
+.footer-nav-list li {
   margin: 5px;
+}
+
+.footer-nav-list a {
+  color: #EFAC27;
 }
 
 .footer-copyright {
@@ -623,6 +687,13 @@ footer {
   margin-top: 40px;
 }
 
+.footer-copyright span,
+.footer-copyright a {
+  color: #B56629;
+  font-size: 1.8rem;
+}
+
+/* Recipe Container */
 .recipe-container {
   height: 100%;
   padding: 100px 0px;
