Added styles on the form element; fixed font-sizing for links and body

--- a/styles/sass/_colors.scss
+++ b/styles/sass/_colors.scss
@@ -16,4 +16,4 @@ $secondary-color: #6B8386;
 // $success-background-color:
 // $success-border-color:
 $warning-color: #CEA533;
-$warning-color-2: #B56629;
+$secondary-warning-color: #B56629;
