modal now displays with the drink recipe

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -240,6 +240,12 @@ footer {
   width: 200px;
 }
 
-.modal {
-  height: 200px;
+.outer-modal {
+  background: rgb(23, 182, 31);
+  
+}
+
+.modal-content {
+  background: rgb(236, 78, 78);
+
 }
