fixed modal overlay

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -752,3 +752,22 @@ footer {
 .modal-content {
   background: #ec4e4e;
 }
+
+.ui-widget-overlay {
+  background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+  opacity: .3;
+  filter: Alpha(Opacity=30);
+}
+
+.ui-widget-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+
+.ui-dialog {
+  z-index: 101;
+}
