--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -249,3 +249,42 @@ footer {
   background: rgb(236, 78, 78);
 
 }
+
+// .ui-widget-overlay { 
+//   position: absolute; 
+//   top: 0; 
+//   left: 0; 
+//   width: 100%; 
+//   height: 100%; 
+//   background: #aaaaaa;
+//   opacity: 0.3;
+// }
+
+// .modal {
+//   height: 600px;
+// }
+
+.ui-widget-overlay {
+  background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+  opacity: .3;
+  filter: Alpha(Opacity=30);
+}
+
+.ui-widget-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+
+// .ui-widget-content {
+//   border: 1px solid #aaaaaa;
+//   background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
+//   color: #222222;
+// }
+
+.ui-dialog {
+  z-index: 101;
+}
