--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -2,6 +2,7 @@
 @import 'setup';
 @import 'mixins';
 @import 'colors';
+@import 'mediaQueries';
 
 
 /* Global */
@@ -11,7 +12,6 @@ html {
 }
 
 body {
-  font-size: 2rem;
   color: $primary-text-color;
   @include primary-font(2.2rem, 2.2, 0.12rem)
 }
@@ -32,7 +32,7 @@ a {
 }
 
 h1 {
-  @include secondary-font(5rem, 2.8, 600, 1rem);
+  @include secondary-font(5.4rem, 2.8, 1.2rem, 600);
   color: $primary-color;
 }
 
@@ -50,7 +50,9 @@ h3 {
 /* Header*/
 header {
   height: 100vh;
-  background-image: url(../assets/banner.jpg);
+  // background-image: url(../assets/banner.jpg);
+  background-image: linear-gradient(to top rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/banner.jpg);
+  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -63,7 +65,7 @@ header {
 
 .header-nav-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 500px;
 
   a {
@@ -78,8 +80,19 @@ header {
   justify-content: center;
   align-items: center;
 
-  p {
-    width: 600px;
+  h2 {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+/* Mobile Navigation */
+.mobile-nav {
+  display: none;
+
+  i {
+    color: $primary-color;
+    font-size: 3.5rem;
   }
 }
 
@@ -242,7 +255,7 @@ footer {
 
 .outer-modal {
   background: rgb(23, 182, 31);
-  
+
 }
 
 .modal-content {
@@ -250,12 +263,12 @@ footer {
 
 }
 
-// .ui-widget-overlay { 
-//   position: absolute; 
-//   top: 0; 
-//   left: 0; 
-//   width: 100%; 
-//   height: 100%; 
+// .ui-widget-overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
 //   background: #aaaaaa;
 //   opacity: 0.3;
 // }
