--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -1,6 +1,34 @@
 @media (max-width: 900px) {
+  /* Header */
+  .header-content {
+    display: block!important;
+  }
+
+  .header-mobile-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .header-nav {
     display: none;
+    position: absolute;
+    width: 100%;
+
+    ul {
+      display: block!important;
+      max-width: 90%;
+      text-align: right;
+    }
+
+    li {
+      display: block;
+    }
+  }
+
+  .header-nav-list li:last-child {
+    margin-left: 0;
+
   }
   .mobile-nav{
     display: block!important;
