--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -7,13 +7,13 @@
 
 /* Global */
 html {
-  font-size: 62.5%;
+  font-size: 100%;
   height: 100%;
 }
 
 body {
   color: $primary-text-color;
-  @include primary-font(2.2rem, 2.2, 0.12rem)
+  @include primary-font(calc(1.1rem + 1.1vw), 2.2, 0.12rem)
 }
 
 .wrapper {
@@ -31,19 +31,18 @@ a {
   text-decoration: none;
 }
 
-
 h1 {
-  @include secondary-font(calc(2.2rem + 2.2vw), 2.8, 1.2rem, 600);
+  @include secondary-font(calc(1.9rem + 1.9vw), 2.8, calc(0.6rem + 0.6vw), 600);
   color: $primary-color;
 }
 
 h2 {
-  @include secondary-font(3rem, 2.2, 0.5rem, 500);
+  @include secondary-font(calc(1.4rem + 1.4vw), 2.2, calc(0.25rem + 0.25vw), 500);
   color: $primary-color;
 }
 
 h3 {
-  @include secondary-font(4rem, 2.2, 0.5rem, 500);
+  @include secondary-font(calc(1.7rem + 1.7vw), 2.2, calc(0.25rem + 0.25vw), 500);
   color: $primary-color;
 }
 /* ========================== */
@@ -78,7 +77,6 @@ header {
   }
 }
 
-
 .header-description {
   width: 100%;
   height: 400px;
@@ -99,11 +97,9 @@ header {
 
   i {
     color: $primary-color;
-    font-size: 3.5rem;
+    font-size: calc(1.7rem + 1.7vw);
   }
 }
-
-
 
 /* About */
 .about {
@@ -170,7 +166,7 @@ header {
 }
 
 input {
-  @include primary-font(2rem, 1.6, 0.1rem);
+  @include primary-font(calc(1rem + 1vw), 1.6, calc(0.05rem + 0.05vw));
   outline: none;
   border: none;
   padding: 10px;
@@ -192,7 +188,7 @@ input:active {
 /* Buttons */
 // XXX TODO - align btn and input horizontally
 .btn {
-  @include primary-font(2rem, 1.6, 0.1rem);
+  @include primary-font(calc(1rem + 1vw), 1.6, calc(0.05rem + 0.05vw));
   color: $primary-text-color;
   background-color: $primary-color;
   border: 1px solid $warning-color;
@@ -233,7 +229,7 @@ footer {
 
 .footer-nav-list a {
   color: $primary-color;
-  font-size: 2rem;
+  font-size: calc(05rem + 0.5vw);
 }
 
 .footer-copyright {
@@ -245,7 +241,7 @@ footer {
   span,
   a {
     color: $secondary-warning-color;
-    font-size: 1.8rem;
+    font-size: calc(0.9rem + 0.9vw);
   }
 }
 
