--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -34,6 +34,33 @@
     display: block!important;
   }
 
+  .main-container {
+    flex-direction: column;
+  }
+
+  .main-search {
+    margin-left: 0!important;
+  }
+}
+
+@media (max-width: 768px) {
+
+  form {
+    flex-direction: column;
+  }
+
+  input {
+    width: 100%!important;
+    margin-bottom: 1rem;
+  }
+
+  .btn {
+    margin-left: 0!important;
+    width: 100%!important;
+    padding: 5px 10px!important;
+  }
+  
+
 }
 
 
