--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -138,6 +138,7 @@ header {
   display: flex;
   justify-content: center;
   margin-bottom: 4rem;
+  text-align: center;
 }
 
 .main-container {
@@ -164,7 +165,6 @@ header {
 .main-img {
   width: 50%;
 }
-
 
 /* Form */
 .invalid-input {
@@ -216,6 +216,33 @@ button:focus {
   opacity: 0.7;
 }
 
+/* Form */
+
+.recipe-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  h3 {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+  ul {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  li {
+    background-color: $secondary-warning-color;
+    text-align: center;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 2rem;
+  }
+}
 
 /* Footer */
 footer {
@@ -242,7 +269,7 @@ footer {
 
 .footer-nav-list a {
   color: $primary-color;
-  font-size: calc(05rem + 0.5vw);
+  font-size: calc(0.9rem + 0.9vw);
 }
 
 .footer-copyright {
@@ -250,11 +277,12 @@ footer {
   justify-content: center;
   padding: 10px;
   margin-top: 40px;
+  text-align: center;
 
   span,
   a {
     color: $secondary-warning-color;
-    font-size: calc(0.9rem + 0.9vw);
+    font-size: calc(0.7rem + 0.7vw);
   }
 }
 
