--- a/styles/styles.css
+++ b/styles/styles.css
@@ -485,6 +485,10 @@ img {
   .main-search {
     margin-left: 0 !important;
   }
+  .main-img,
+  .main-search {
+    width: 80% !important;
+  }
 }
 
 @media (max-width: 768px) {
@@ -502,6 +506,29 @@ img {
     margin-left: 0 !important;
     width: 100% !important;
     padding: 5px 10px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-logo {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-top: 2.5rem;
+  }
+  .footer-nav-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -695,6 +722,7 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 4rem;
+  text-align: center;
 }
 
 .main-container {
@@ -785,6 +813,55 @@ button:focus {
   opacity: 0.7;
 }
 
+/* Form */
+.recipe-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.recipe-container h3 {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.recipe-container ul {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.recipe-container li {
+  background-color: #B56629;
+  text-align: center;
+  width: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 2rem;
+}
+
 /* Footer */
 footer {
   height: 100%;
@@ -819,7 +896,7 @@ footer {
 
 .footer-nav-list a {
   color: #EFAC27;
-  font-size: calc(05rem + 0.5vw);
+  font-size: calc(0.9rem + 0.9vw);
 }
 
 .footer-copyright {
@@ -831,12 +908,13 @@ footer {
           justify-content: center;
   padding: 10px;
   margin-top: 40px;
+  text-align: center;
 }
 
 .footer-copyright span,
 .footer-copyright a {
   color: #B56629;
-  font-size: calc(0.9rem + 0.9vw);
+  font-size: calc(0.7rem + 0.7vw);
 }
 
 /* Recipe Container */
