--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -27,13 +27,20 @@ section {
 }
 
 a {
+  display: inline-block;
   padding: 5px;
   text-decoration: none;
+  transition: .2s;
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
 }
 
 h1 {
   @include secondary-font(calc(1.9rem + 1.9vw), 2.8, calc(0.6rem + 0.6vw), 600);
   color: $primary-color;
+
 }
 
 h2 {
@@ -222,9 +229,14 @@ button:focus {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  .drink-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }  
   h3 {
     font-size: 1.5rem;
-    margin-bottom: 2rem;
+    margin: 2rem;
   }
   ul {
     width: 100%;
@@ -233,7 +245,7 @@ button:focus {
     flex-wrap: wrap;
   }
   li {
-    background-color: $secondary-warning-color;
+    background-color: rgba(192, 95, 38, 0.2);
     text-align: center;
     width: 300px;
     display: flex;
@@ -247,7 +259,7 @@ button:focus {
 /* Footer */
 footer {
   height: 100%;
-  background-color: $primary-background-color;;
+  background-color: $primary-background-color;
 }
 
 .footer-container {
@@ -278,11 +290,15 @@ footer {
   padding: 10px;
   margin-top: 40px;
   text-align: center;
-
   span,
   a {
-    color: $secondary-warning-color;
     font-size: calc(0.7rem + 0.7vw);
+  }
+  span {
+    color: $secondary-warning-color;
+  }
+  a {
+    color: $primary-text-color;
   }
 }
 
