--- a/styles/styles.css
+++ b/styles/styles.css
@@ -834,6 +834,7 @@ button:focus {
 }
 
 .recipe-container .drink-title {
+  height: 175px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
