--- a/styles/sass/_colors.scss
+++ b/styles/sass/_colors.scss
@@ -4,6 +4,7 @@
 // Functional Colors:
 $primary-background-color: #070808;
 $secondary-background-color: #262119;
+$accent-background-color: rgba(192, 95, 38, 0.2);
 $primary-text-color: #FAFAFA;
 $secondary-text-color: #C4C4C1;
 // Primary Brand Colors:
