--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -34,6 +34,8 @@
     display: block!important;
   }
 
+  
+  /* Main */
   .main-container {
     flex-direction: column;
   }
@@ -46,11 +48,10 @@
   .main-search {
     width: 80%!important;
   }
-
 }
 
 @media (max-width: 768px) {
-
+  /* Form */
   form {
     flex-direction: column;
   }
@@ -65,12 +66,11 @@
     width: 100%!important;
     padding: 5px 10px!important;
   }
-  
 }
 
+
 @media (max-width: 480px) {
-
-
+  /* Footer */
   .footer-container {
     flex-direction: column;
   }
@@ -84,15 +84,13 @@
     justify-content: center;
     align-items: center;
   }
-
-
 }
 
 
 @media (max-width: 360px) {
-
-    h1 {
-      font-size: 1.5rem!important;
+  /* Header */
+  h1 {
+    font-size: 1.5rem!important;
   }
 
   .mobile-nav {
@@ -100,5 +98,4 @@
       font-size: 1.6rem!important;
     }
   }
-
 }
