--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -99,6 +99,7 @@ header {
   }
 }
 
+
 /* Mobile Navigation */
 .mobile-nav {
   display: none;
@@ -108,6 +109,7 @@ header {
     font-size: calc(1.7rem + 1.7vw);
   }
 }
+
 
 /* About */
 .about {
@@ -135,7 +137,6 @@ header {
 .main {
   // https://css-tricks.com/couple-takes-sticky-footer/
   min-height: calc(100vh - 180px); // for sticky footer
-  // height: 500px;
   display: flex;
   align-items: center;
   background-color: $secondary-background-color;
@@ -168,10 +169,12 @@ header {
   margin-bottom: 20px;
 }
 
+
 /* Main Image */
 .main-img {
   width: 50%;
 }
+
 
 /* Form */
 .invalid-input {
@@ -181,7 +184,6 @@ header {
 form {
   display: flex;
 }
-
 
 input {
   @include primary-font(calc(0.8rem + 0.8vw), 1.6, calc(0.05rem + 0.05vw));
@@ -205,7 +207,6 @@ input:active {
 
 
 /* Buttons */
-// XXX TODO - align btn and input horizontally
 .btn {
   @include primary-font(calc(1rem + 1vw), 1.6, calc(0.05rem + 0.05vw));
   color: $primary-text-color;
@@ -223,30 +224,34 @@ button:focus {
   opacity: 0.7;
 }
 
-/* Form */
 
+/* Dynamically Added Recipe Container */
 .recipe-container {
   display: flex;
   justify-content: space-evenly;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
+
   .drink-title {
     height: 175px;
     display: flex;
     justify-content: center;
     align-items: center;
-  }  
+  }
+
   h3 {
     font-size: 1.5rem;
     margin: 2rem;
   }
+
   ul {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
   }
+
   li {
-    background-color: rgba(192, 95, 38, 0.2);
+    background-color: $accent-background-color;
     text-align: center;
     width: 300px;
     display: flex;
@@ -256,6 +261,7 @@ button:focus {
     margin: 2rem;
   }
 }
+
 
 /* Footer */
 footer {
@@ -279,7 +285,6 @@ footer {
   }
 }
 
-
 .footer-nav-list a {
   color: $primary-color;
   font-size: calc(0.9rem + 0.9vw);
@@ -291,25 +296,23 @@ footer {
   padding: 10px;
   margin-top: 40px;
   text-align: center;
+
   span,
   a {
     font-size: calc(0.7rem + 0.7vw);
   }
+
   span {
     color: $secondary-warning-color;
   }
+
   a {
     color: $primary-text-color;
   }
 }
 
 
-/* Recipe Container */
-.recipe-container {
-  height: 100%;
-  padding: 100px 0px;
-}
-
+/* Dynamic Modal */
 .drinkImg {
   height: 200px;
   width: 200px;
@@ -317,28 +320,14 @@ footer {
 
 .outer-modal {
   background: rgb(23, 182, 31);
-
 }
 
 .modal-content {
   background: rgb(236, 78, 78);
-
 }
 
-// .ui-widget-overlay {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background: #aaaaaa;
-//   opacity: 0.3;
-// }
 
-// .modal {
-//   height: 600px;
-// }
-
+/* jQuery ui classes needed for the modal */
 .ui-widget-overlay {
   background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
   opacity: .3;
@@ -353,12 +342,6 @@ footer {
   height: 100%;
   z-index: 100;
 }
-
-// .ui-widget-content {
-//   border: 1px solid #aaaaaa;
-//   background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
-//   color: #222222;
-// }
 
 .ui-dialog {
   z-index: 101;
