Added padding to the recipe container section

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -230,6 +230,8 @@ button:focus {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  padding: 100px 0;
+}
 
   .drink-title {
     height: 175px;
