--- a/styles/styles.css
+++ b/styles/styles.css
@@ -460,11 +460,10 @@ img {
   .header-nav {
     display: none;
     position: absolute;
-    width: 100%;
+    width: 90%;
   }
   .header-nav ul {
     display: block !important;
-    max-width: 90%;
     text-align: right;
   }
   .header-nav li {
@@ -835,6 +834,7 @@ button:focus {
           justify-content: space-evenly;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding: 100px 0;
 }
 
 .recipe-container .drink-title {
@@ -943,11 +943,6 @@ footer {
 }
 
 /* Dynamic Modal */
-.drinkImg {
-  height: 200px;
-  width: 200px;
-}
-
 .outer-modal {
   background: #17b61f;
 }
