Fixed modal bugs

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -308,6 +308,17 @@ footer {
 
 
 /* Dynamic Modal */
+
+.recipe-container-image,
+.recipe-container-ingredients,
+.recipe-container-instructions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .outer-modal {
   background: rgb(23, 182, 31);
 }
