Changed modal design; modal is now responsive

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -92,6 +92,15 @@
     font-size: 1.5rem!important;
   }
 
+  .modal-content {
+    h3 {
+      font-size: 1.2rem!important;
+    }
+    p, li {
+      font-size: 1rem!important;
+    }
+  }
+
   .mobile-nav {
     i {
       font-size: 1.6rem!important;
