Added text for the search steps

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -171,6 +171,11 @@ header {
 
 .main-content {
   margin-bottom: 20px;
+
+  .main-content-steps {
+    list-style-type: disc;
+    margin-left: 20px;
+  }
 }
 
 
