--- a/styles/styles.css
+++ b/styles/styles.css
@@ -777,6 +777,11 @@ header {
   margin-bottom: 20px;
 }
 
+.main-content .main-content-steps {
+  list-style-type: disc;
+  margin-left: 20px;
+}
+
 /* Main Image */
 .main-img {
   width: 50%;
