--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -26,7 +26,7 @@ section {
   padding: 100px 0;
 }
 
-a {
+nav a {
   display: inline-block;
   padding: 5px;
   text-decoration: none;
@@ -91,7 +91,7 @@ header {
 
 .header-description {
   width: 100%;
-  height: 400px;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -313,6 +313,10 @@ footer {
     font-size: calc(0.7rem + 0.7vw);
     color: $secondary-warning-color!important;
   }
+}
+
+.juno-footer-link {
+  text-decoration: none;
 }
 
 /* Dynamic Modal */
