--- a/styles/styles.css
+++ b/styles/styles.css
@@ -575,7 +575,7 @@ section {
   padding: 100px 0;
 }
 
-a {
+nav a {
   display: inline-block;
   padding: 5px;
   text-decoration: none;
@@ -583,7 +583,7 @@ a {
   transition: .2s;
 }
 
-a:hover, a:focus {
+nav a:hover, nav a:focus {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
@@ -666,7 +666,7 @@ header {
 
 .header-description {
   width: 100%;
-  height: 400px;
+  height: 50vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -960,6 +960,10 @@ footer {
 .footer-copyright a {
   font-size: calc(0.7rem + 0.7vw);
   color: #B56629 !important;
+}
+
+.juno-footer-link {
+  text-decoration: none;
 }
 
 /* Dynamic Modal */
