--- a/styles/styles.css
+++ b/styles/styles.css
@@ -687,6 +687,7 @@ header {
 /* Mobile Navigation */
 .mobile-nav {
   display: none;
+  cursor: pointer;
 }
 
 .mobile-nav i {
@@ -814,7 +815,8 @@ input {
 }
 
 input:focus,
-button:focus {
+button:focus,
+.mobile-nav a:focus {
   outline: 0.1px dotted #EFAC27;
 }
 
@@ -857,6 +859,11 @@ button:focus {
   padding: 100px 0;
 }
 
+.recipe-container img {
+  width: 90%;
+  margin-bottom: 30px;
+}
+
 .recipe-container .drink-title {
   height: 175px;
   display: -webkit-box;
@@ -873,6 +880,13 @@ button:focus {
 .recipe-container h3 {
   font-size: 1.5rem;
   margin: 2rem;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.recipe-container h3:hover, .recipe-container h3:focus {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .recipe-container ul {
@@ -887,8 +901,8 @@ button:focus {
       flex-wrap: wrap;
 }
 
-.recipe-container li {
-  background-color: rgba(192, 95, 38, 0.2);
+.recipe-container .recipe-details {
+  background-color: #070808;
   text-align: center;
   width: 300px;
   display: -webkit-box;
@@ -905,6 +919,7 @@ button:focus {
       -ms-flex-align: center;
           align-items: center;
   margin: 2rem;
+  border: none;
 }
 
 /* Footer */
