--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -185,6 +185,34 @@ header {
   width: 50%;
 }
 
+/* Search Buttons */
+.search-buttons-heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+    h4 {
+      @include secondary-font(calc(1.3rem + 1.3vw), 2.2, calc(0.25rem + 0.25vw))
+    }
+}
+
+.search-buttons {
+  display: flex;
+  justify-content: center;
+  button {
+    @include primary-font(calc(.7rem + .7vw), 1.6, calc(0.05rem + 0.05vw));
+    color: $primary-text-color;
+    background-color: $primary-color;
+    border: 1px solid $warning-color;
+    text-align: center;
+    padding: 5px 10px;
+    width: 100%;
+    &:last-child {
+      margin-left: 15px;
+    }
+  }
+  margin-bottom: 75px;
+}
 
 /* Form */
 .invalid-input {
