--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -4,7 +4,6 @@
 @import 'colors';
 @import 'mediaQueries';
 
-
 /* Global */
 html {
   font-size: 100%;
@@ -40,7 +39,6 @@ nav a {
 h1 {
   @include secondary-font(calc(1.9rem + 1.9vw), 2.8, calc(0.6rem + 0.6vw), 600);
   color: $primary-color;
-
 }
 
 h2 {
@@ -57,7 +55,6 @@ h4 {
   @include secondary-font(calc(1.7rem + 1.7vw), 2.2, calc(0.25rem + 0.25vw), 500);
   color: $primary-color;
 }
-/* ========================== */
 
 
 /* Header*/
@@ -173,6 +170,10 @@ header {
 .main-content {
   margin-bottom: 20px;
 
+  p {
+    text-align: center;
+  }
+
   .main-content-steps {
     list-style-type: disc;
     margin-left: 20px;
@@ -185,12 +186,14 @@ header {
   width: 50%;
 }
 
+
 /* Search Buttons */
 .search-buttons-heading {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
     h4 {
       @include secondary-font(calc(1.3rem + 1.3vw), 2.2, calc(0.25rem + 0.25vw))
     }
@@ -199,6 +202,8 @@ header {
 .search-buttons {
   display: flex;
   justify-content: center;
+  margin-bottom: 75px;
+
   button {
     @include primary-font(calc(.7rem + .7vw), 1.6, calc(0.05rem + 0.05vw));
     color: $primary-text-color;
@@ -207,12 +212,13 @@ header {
     text-align: center;
     padding: 5px 10px;
     width: 100%;
+
     &:last-child {
       margin-left: 15px;
     }
   }
-  margin-bottom: 75px;
 }
+
 
 /* Form */
 .invalid-input {
@@ -269,6 +275,7 @@ button:focus {
   justify-content: space-evenly;
   flex-wrap: wrap;
   padding: 100px 0;
+
   img {
     width: 90%;
     margin-bottom: 30px;
@@ -402,8 +409,6 @@ footer {
 .recipe-container-instructions p {
   width: 80%;
 }
-
-
 
 
 /* jQuery ui classes needed for the modal */
