added html background-color

--- a/styles/sass/_colors.scss
+++ b/styles/sass/_colors.scss
@@ -1,5 +1,5 @@
-/* COLORS
-========================== */
+/* COLORS*/
+
 
 // Functional Colors:
 $primary-background-color: #070808;
@@ -11,10 +11,6 @@ $secondary-text-color: #C4C4C1;
 $primary-color: #EFAC27;
 $secondary-color: #6B8386;
 
-
 // Feedback Colors:
-// $success-color:
-// $success-background-color:
-// $success-border-color:
 $warning-color: #CEA533;
 $secondary-warning-color: #B56629;
